<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Net-new (no source construct) - see docs/DECISION_LOG.md -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <!-- Coordinates and base package name - see docs/DECISION_LOG.md DL-002. -->
    <groupId>com.codeskeptic</groupId>
    <artifactId>code-skeptic-scanner-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>code-skeptic-scanner-backend</name>
    <description>Code Skeptic Scanner backend service (Java 21 / Spring Boot)</description>

    <properties>
        <java.version>21</java.version>

        <!-- Version overrides applied to coordinates otherwise managed by
             spring-boot-dependencies 3.5.16, whose values are 42.7.11 and
             10.1.55. The Connector/J coordinate carries no override:
             com.mysql:mysql-connector-j resolves to the BOM-managed 9.7.0
             release - see docs/DECISION_LOG.md. -->
        <postgresql.version>42.7.13</postgresql.version>
        <tomcat.version>10.1.57</tomcat.version>
        <!-- Arrives transitively through spring-boot-starter-webflux ->
             reactor-netty-http - see docs/DECISION_LOG.md DL-100. -->
        <netty.version>4.1.136.Final</netty.version>
        <!-- Governs every com.fasterxml.jackson coordinate on the classpath,
             including the modules openai-java and jjwt-jackson consume - see
             docs/DECISION_LOG.md DL-101. -->
        <jackson-bom.version>2.21.5</jackson-bom.version>
    </properties>

    <dependencies>
        <!-- Replaces PyPI Flask (backend/app/main.py:L1,
             backend/app/api/tweets.py:L1) and Flask-Cors
             (backend/app/main.py:L2) - see docs/DECISION_LOG.md DL-013. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Replaces PyPI tweepy (backend/app/services/twitter_service.py:L1,
             backend/app/tasks/tweet_monitoring.py:L1) - see
             docs/DECISION_LOG.md DL-012. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <!-- Replaces PyPI SQLAlchemy (backend/app/db/database.py:L1-2,
             backend/app/db/models.py:L1-3). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- Replaces PyPI Flask-JWT-Extended (backend/app/main.py:L3,
             backend/app/api/tweets.py:L2) and passlib
             (backend/app/core/security.py:L3). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- Replaces PyPI pydantic (backend/app/schema/tweet.py:L1,
             backend/app/schema/response.py:L1) - see docs/DECISION_LOG.md
             DL-050. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Metadata for the @ConfigurationProperties port of
             backend/app/core/config.py:L4-15. -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Replaces PyPI PyJWT (backend/app/core/security.py:L1) - see
             docs/DECISION_LOG.md DL-014. -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.13.0</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.13.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.13.0</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Replaces PyPI google-cloud-language
             (backend/app/services/sentiment_analysis.py:L1) - see
             docs/DECISION_LOG.md DL-010. -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-language</artifactId>
            <version>2.96.0</version>
        </dependency>

        <!-- Replaces PyPI openai (backend/app/services/llm_service.py:L1) -
             see docs/DECISION_LOG.md DL-011. -->
        <dependency>
            <groupId>com.openai</groupId>
            <artifactId>openai-java</artifactId>
            <version>4.49.0</version>
        </dependency>

        <!-- JDBC drivers for DATABASE_URL (backend/app/core/config.py:L9) -
             see docs/DECISION_LOG.md DL-028. The PostgreSQL version is decided
             by DL-169; Connector/J takes the BOM-managed version. -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Test-time database - see docs/DECISION_LOG.md DL-009. -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Replaces PyPI pytest (backend/tests/test_api.py:L1,
             backend/tests/test_tasks.py:L1), unittest and unittest.mock
             (backend/tests/test_services.py:L1-2) and fastapi.testclient
             (backend/tests/test_api.py:L2). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Replaces the fastapi TestClient calls in
             backend/tests/test_api.py:L1-59 - see docs/DECISION_LOG.md
             DL-021. -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Requests annotation processing explicitly for the
                 spring-boot-configuration-processor declared above, on both the
                 main and the test compilation. Version and release level
                 inherited from the parent - see docs/DECISION_LOG.md DL-174. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <proc>full</proc>
                </configuration>
            </plugin>

            <!-- Version inherited from the parent - see docs/DECISION_LOG.md
                 DL-004. -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
